gitignore picked up?

--- a/Animeniac/client/src/components/Videos.module.css
+++ b/Animeniac/client/src/components/Videos.module.css
@@ -52,7 +52,7 @@ h2 {
     margin-bottom: 20px;
 }
 
-.videos p {
+.videoSelection {
     display: flex;
     gap: 20px;
     justify-content: center;
