--- a/Animeniac/client/src/components/Animes.module.css
+++ b/Animeniac/client/src/components/Animes.module.css
@@ -15,16 +15,18 @@
 .link {
     color: red;
     font-size: 1.5rem;
-    align-self: center;
     width: 20%;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
 }
 
 .boxes {
     display: flex;
-    flex-wrap: wrap;
-    margin: 0 auto;
-    max-width: 1400px;
-    gap: 20px;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
 }
 
 .tags {
@@ -34,56 +36,9 @@
     width: 100%;
 }
 
-.image1 {
-    width: 400px;
-    height: 400px;
-    background-image: url('https://m.media-amazon.com/images/I/81qb4I6rbsL.jpg');
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    border: none;
+.comment {
+    text-decoration: none;
 }
 
-.image2 {
-    width: 400px;
-    height: 400px;
-    background-image: url('https://static1.colliderimages.com/wordpress/wp-content/uploads/2021/11/one-piece-anime.jpg');
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    border: none;
-}
 
-.image3 {
-    width: 400px;
-    height: 400px;
-    background-image: url('https://cdn.myanimelist.net/images/anime/3/40451.jpg');
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    border: none;
-}
 
-.image4 {
-    width: 400px;
-    height: 400px;
-    background-image: url('https://www.crunchyroll.com/imgsrv/display/thumbnail/480x720/catalog/crunchyroll/a9d4c1493f80703fe86dd83fb3b37623.jpeg');
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    border: none;
-}
-
-.image5 {
-    width: 400px;
-    height: 400px;
-    background-image: url('https://cdn.vox-cdn.com/thumbor/X79UWKygqvHYOTB2w0Jbe7Wxois=/0x165:1200x1800/1200x675/filters:focal(519x375:711x567)/cdn.vox-cdn.com/uploads/chorus_image/image/67588448/ChainsawMan_GN01_C1_Catalog.0.jpg');
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    border: none;
-}
-
-.image6 {
-    width: 400px;
-    height: 400px;
-    background-image: url('https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6421/6421973_so.jpg');
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    border: none;
-}
