--- a/Animeniac/client/src/components/Homepage.module.css
+++ b/Animeniac/client/src/components/Homepage.module.css
@@ -43,6 +43,11 @@
     text-decoration: none;
 }
 
+.images {
+    max-width: 1000px;
+    margin-left: 30px;
+}
+
 .mainImg {
     background-image: url('https://i0.wp.com/vgkami.com/wp-content/uploads/2022/03/VGKStrongestAnimeCharactersFeaturedImg.jpg?resize=1200%2C675&ssl=1');
     background-size: contain;
