--- a/Animeniac/client/src/components/Comments.module.css
+++ b/Animeniac/client/src/components/Comments.module.css
@@ -24,6 +24,9 @@ h1 {
 .comments p {
     font-size: 2rem;
 }
+.date {
+    font-size: 1rem;
+}
 
 .editBox {
     font-size: 2rem;
@@ -48,3 +51,4 @@ h1 {
     gap: 10px;
     align-items: center;
 }
+
