--- a/Chore-Tracker/client/src/modules/ChoresDisplay.module.css
+++ b/Chore-Tracker/client/src/modules/ChoresDisplay.module.css
@@ -1,3 +1,8 @@
+.background {
+    background-color: #94d2bd;
+    height: 950px;
+}
+
 .nav {
     display: flex;
     justify-content: space-around;
@@ -24,6 +29,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    margin: 0px 10px;
 }
 
 .chores {
