--- a/Chore-Tracker/client/src/modules/Homepage.module.css
+++ b/Chore-Tracker/client/src/modules/Homepage.module.css
@@ -4,10 +4,13 @@
     justify-content: center;
     align-items: center;
     height: 100%;
+    height: 950px;
+    background-color: #e9d8a6;
 }
 
 .home h1 {
     font-size: 60px;
+    margin-bottom: 30px;
 }
 
 .home h2 {
@@ -17,7 +20,7 @@
 .link {
     text-decoration: none;
     border: 3px solid #219ebc;
-    padding: 5px;
+    padding: 15px;
     background-color: #fb8500;
     color: #219ebc;
 }
